# LU-Decomposition

./: CMakeLists.txt  LU_Decomp.c  LU_Header.h  README.md  main.c  read_matrix.c
